# MedScale

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  research_task.md
.github/workflows/: ci.yml  codeql.yml  optional-extras.yml  release.yml
_tmp_ds_validate/: manifest.json
_tmp_ds_validate/checksums/: manifest.json.sha256
collaboration/reviewers/: alice.json
data/bench/manifests/: medscale-bench-v1.json
data/litdb/: LICENSE.md  README.md
data/litdb/corpus/: records.jsonl
data/litdb/manifests/: round1.json  run0-pilot.json
data/litdb/reports/: round1-coverage.json  round1.json
data/litdb/screening/: merge_log.jsonl  review_log.jsonl  screening_log.jsonl  uncertain_duplicates.jsonl  uncertain_resolutions.jsonl
data/litdb/snapshots/: cfdfcce5e2830391.json
docs/: README.md  glossary.md
docs/adr/: 0000-template.md  0003-repository-topology.md  0004-t0-foundation-scope.md  0005-research-intelligence-scope.md  0006-model-access-strategy.md  0007-openmed-adapter.md  0008-interoperability-fhir-canonical.md  0009-evidence-model.md  0010-release-architecture.md  0011-versioning-licensing.md  0012-layered-architecture-model.md  0013-language-strategy.md  0014-core-namespace.md  0015-model-agnostic-platform.md  0016-raw-archive-storage.md  0017-identifier-stability-contract.md  0018-evidence-identity-decoupling.md  0019-continuity-and-succession.md  0020-public-api-stability.md  0021-extension-architecture.md  0022-screening-decision-semantics.md  0029-benchmark-determinism-and-replay-contract.md  0030-dataset-versioning-and-training-artifact-contract.md  0031-deterministic-dataset-contract-boundary.md  0032-deterministic-dataset-split-assignment-freeze-contract.md  0033-modelkit-public-surface-and-runtime-governance.md
docs/architecture/: ai_model_strategy.md  distribution_hf.md  ecosystem_analysis.md  ecosystem_evolution.md  interoperability_strategy.md  medscale_reference_architecture.md  model_agnostic_platform.md  openmed_capability_analysis.md  openmed_integration_strategy.md
docs/architecture/reviews/: 2026-07-10-cto-review.md  2026-07-10-post-round1.md  2026-07-10-stress-test.md  2026-07-10-survivability-audit.md  2026-07-12-independent-decade-review.md
docs/archive/: DATASET_V1_PLAN.superseded.md  MEDSCALE_RESEARCH_BLUEPRINT_V1_SUPERSEDED.md
docs/execution/: README.md  mission_zero.md  search_strategy.md
docs/execution/mission_zero/: README.md  completion_criteria.md  daily_checklist.md  incident_response.md  journal.md  journal_template.md  lessons_learned.md  protocol.md  success_metrics.md
docs/execution/v0.2/: M2-evidence-infrastructure.md  M3-README.md  M4-README.md  M5-README.md  M6-README.md  RELEASE_CHECKLIST.md  adr_implementation_tracker.md  architecture_audit.md  dataset_v1.md  final_release_audit.md  milestone_tracker.md  release_readiness.md  technical_debt.md
docs/governance/: README.md  roles_and_authority.md  rules.md
docs/guides/: developer_guide.md  first_systematic_review.md  research_quickstart.md  troubleshooting.md
docs/models/: llm_landscape.md  model_registry.md
docs/models/schemas/: model_card_schema.md
docs/releases/: README.md  artifact_lifecycle.md  benchmark_publication.md  ci_cd.md  dataset_cards.md  distribution.md  licensing.md  model_cards.md  papers.md  release_process.md  reproducibility.md  versioning.md
docs/research/: README.md  experiment_framework.md  novelty_candidates.md  paper_taxonomy.md  reproducibility_policy.md  research_questions.md
docs/research/reviews/: 2026-07-10-scientific-integrity-round1.md
docs/vision/: MEDSCALE_RESEARCH_VISION.md  MEDSCALE_STRATEGIC_BLUEPRINT_V1.md
scripts/: ingest_round.py  mesc_pilot_01_transform_pubmedqa.py  mesc_pilot_01_validate_pubmedqa.py  prepare_screening.py  tag_query_lineage.py
specs/align-14/: README.md  acceptance.md  contracts.md  data-model.md  decision-record.md  implementation-task.md  plan.md  research.md  spec.md
specs/align-15/: README.md  acceptance.md  audit-task.md  contracts.md  data-model.md  decision-record.md  plan.md  research.md  spec.md
specs/align-16/: README.md  acceptance.md  audit-task.md  contracts.md  data-model.md  decision-record.md  plan.md  research.md  spec.md
specs/align-17/: README.md  acceptance.md  adr-task.md
specs/mesc-pilot-01/: README.md  acceptance.md  data-contract.md  dataset-selection.md  evaluation-contract.md  model-landscape.md  model-selection.md  plan.md  revision-lock.md  risk-register.md  spec.md  tasks.md
specs/mesc-pilot-01/p01-03/: README.md  acceptance.md  data-model.md  decision-record.md  execution-protocol.md  plan.md  research.md  (+1 more)
specs/public-repository-alignment/: phase2-boundary-audit.md  plan.md  spec.md  tasks.md
src/medscale/: __init__.py  _layout.py  _runtime.py  cli.py  evidence.py  evidence_checks.py  evidence_store.py  extraction.py  provenance.py  reproducibility.py  workspace.py
tests/: test_architecture.py  test_bench_engine.py  test_bench_replay.py  test_bench_tasks.py  test_cli_ux.py  test_collaboration.py  test_core_library.py  test_dataset_builder.py  test_dataset_cli.py  test_dataset_freeze.py  test_dataset_manifest.py  test_dataset_split.py  test_dataset_validation.py  test_evidence.py  test_evidence_engine.py  test_evidence_subpackage.py  test_fhir_cli.py  test_fhirkit.py  test_format_versioning.py  test_litdb_adapters.py  test_litdb_ai_triage.py  test_litdb_coverage.py  test_litdb_dedupe.py  test_litdb_ingest.py  test_litdb_integrity.py  test_litdb_lineage.py  test_litdb_parsers.py  test_litdb_queries.py  test_litdb_records.py  test_litdb_review.py  test_litdb_screen_cli.py  test_litdb_screening.py  test_litdb_screening_log.py  test_litdb_sources.py  test_litdb_store.py  test_litdb_uncertain.py  test_litdb_workqueue.py  test_mesc_b0.py  test_mesc_contracts.py  test_mesc_evaluation.py  (+16 more)
(+187 files in other folders)
